# crossmem

./: .copilotignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crossmem/: __init__.py  benchmark.py  cli.py  embeddings.py  graph.py  ingest.py  server.py  stopwords.py  store.py  sync.py
src/crossmem/commands/: __init__.py  config.py  core.py  doctor.py  hooks.py  setup.py
tests/: test_benchmark.py  test_cli.py  test_doctor.py  test_e2e.py  test_ingest.py  test_server.py  test_stopwords.py  test_store.py  test_sync.py
