[project]
name = "crossmem"
version = "0.9.1"
description = "Cross-project memory for AI coding agents"
readme = "README.md"
authors = [
    { name = "Md Niajul Hasan", email = "niajul1992@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ai", "memory", "mcp", "developer-tools", "cross-project"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "mcp>=1.27.0",
]

[project.scripts]
crossmem = "crossmem.cli:main"
crossmem-server = "crossmem.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/crossmem/graph.py" = ["E501"]  # HTML/JS template has long lines
"tests/test_cli.py" = ["E501"]  # Long mock/fixture lines

[tool.pytest.ini_options]
testpaths = ["tests"]
